--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>Once upon a time...</title>
   </head>
   <body>
-    <p>Hi</p>
+    <div id="main">
+
+    </div>
   </body>
+  <script type="text/javascript" src="jquery-3.7.1.min.js"></script>
+  <script type="text/javascript" src="nodes.js"></script>
   <script type="text/javascript" src="once.js"></script>
 </html>
