--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="main">
 
     </div>
+    <p style="float: right; color: gray;">Use arrow keys, or click around.</p>
   </body>
   <script type="text/javascript" src="jquery-3.7.1.min.js"></script>
   <script type="text/javascript" src="color-conversion-algorithms.js"></script>
