--- a/index.html
+++ b/index.html
@@ -14,4 +14,12 @@
   <script type="text/javascript" src="color-conversion-algorithms.js"></script>
   <script type="text/javascript" src="nodes.js"></script>
   <script type="text/javascript" src="once.js"></script>
+  <script type="text/javascript">
+    const GRAPHER = main();
+
+    function CLICK_SEGMENT(segmentId) {
+        GRAPHER.clickSegment(segmentId);
+    }
+    
+  </script>
 </html>
