--- a/index.html
+++ b/index.html
@@ -15,6 +15,59 @@
   <script type="text/javascript" src="nodes.js"></script>
   <script type="text/javascript" src="once.js"></script>
   <script type="text/javascript">
+
+    function main() {
+
+    // GRAPH comes from nodes.js
+    const grapher = new Grapher(GRAPH);
+
+    // https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key
+    window.addEventListener(
+        "keydown",
+        (event) => {
+          if (event.defaultPrevented) {
+            return; // Do nothing if the event was already processed
+          }
+      
+          switch (event.key) {
+            case "ArrowDown":
+              // Do something for "down arrow" key press.
+              break;
+            case "ArrowUp":
+              // Do something for "up arrow" key press.
+              break;
+            case "ArrowLeft":
+              // Do something for "left arrow" key press.
+              grapher.arrowLeft();
+              break;
+            case "ArrowRight":
+              // Do something for "right arrow" key press.
+              grapher.arrowRight();
+              break;
+            case "Enter":
+              // Do something for "enter" or "return" key press.
+              break;
+            case " ":
+              // Do something for "space" key press.
+              break;
+            case "Escape":
+              // Do something for "esc" key press.
+              break;
+            default:
+              return; // Quit when this doesn't handle the key event.
+          }
+      
+          // Cancel the default action to avoid it being handled twice
+          event.preventDefault();
+        },
+        true,
+      );
+
+    return grapher;
+    }
+
+
+
     const GRAPHER = main();
 
     function CLICK_SEGMENT(segmentId) {
