--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             switch (event.key) {
               case "ArrowDown":
                 // Do something for "down arrow" key press.
+                grapher.arrowDown();
                 break;
               case "ArrowUp":
                 // Do something for "up arrow" key press.
+                //grapher.arrowUp();
                 break;
               case "ArrowLeft":
                 // Do something for "left arrow" key press.
