--- a/pages.html
+++ b/pages.html
@@ -19,11 +19,12 @@
     function main() {
         // GRAPH comes from nodes.js
         const grapher = new Grapher(GRAPH);
+        const pagedStory = new PagedStory(grapher, 1);
 
-        return grapher;
+        return pagedStory;
     }
 
-    const GRAPHER = main();
+    const PAGED_STORY = main();
 
   </script>
 </html>
