--- a/pages.html
+++ b/pages.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="once.js"></script>
   <script type="text/javascript">
 
-    function main() {
+    /*function main() {
         // GRAPH comes from nodes.js
         const grapher = new Grapher(GRAPH);
         const pagedStory = new PagedStory(grapher, 1);
@@ -24,7 +24,7 @@
         return pagedStory;
     }
 
-    const PAGED_STORY = main();
+    const PAGED_STORY = main();*/
 
   </script>
 </html>
