--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="jquery-3.7.1.min.js"></script>
   <script type="text/javascript" src="color-conversion-algorithms.js"></script>
   <script type="text/javascript" src="nodes.js"></script>
-  <script type="text/javascript" src="once.js"></script>
+  <script type="text/javascript" src="once2.js"></script>
   <script type="text/javascript">
 
     function main() {
