--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Viewport_meta_tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css">
     <title>Once upon a time...</title>
   </head>
