--- a/index2.html
+++ b/index2.html
@@ -73,6 +73,10 @@
 
     const VIZ = main();
 
+    function CLICK_SEGMENT(segId) {
+      VIZ.clickSegment(segId);
+    }
+
     
   </script>
 </html>
